--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,31 @@ body{
     font-family: "Open Sans", sans-serif;
     font-size: 1em;
 }
+.navigation{
+    display: grid;
+    grid-template: 3rem 20rem 3rem 20rem/repeat(3,1fr);
+    grid-column-gap: 1.5rem;
+    padding: 3rem;
+}
+.post{
+    grid-column: 1/4;
+    text-align: center;
+    font-size: 1.5em;
+}
+.article{
+    width: 100%;
+    height: 100%;
+    margin: 1.5rem 0;
+}
+.date{
+    font-size: 0.875em;
+    padding-top:1.5rem;
+}
+.blog h2{
+    padding-top: 1rem;
+    margin:0;
+}
+.blog p{
+    padding-top: 0.5rem;
+    margin-top: 0;
+}
