--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,15 @@ body{
     margin: 0;
     font-size: 0.75em;
 }
+
+@media (max-width: 675px) {
+  .navigation {
+    display: block;
+    padding: 2rem 1rem;
+  }
+  .blog {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+}
