첫번째 페이지 수정
첫번째 페이지 html 수정했습니다.

--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,9 @@ body{
     margin: 0;
     font-size: 0.75em;
 }
-
+.content{
+  display: grid;
+}
 @media (max-width: 675px) {
   .navigation {
     display: block;
