웹 메인 이미지 추가
웹 메인 이미지 추가 했습니다.

--- a/styles.css
+++ b/styles.css
@@ -1,137 +1,138 @@
 body{
-    font-family: "Open Sans", sans-serif;
-    font-size: 1em;
-    background: #fafafa;
-    margin: 0;
-    color: #151515;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1em;
+  background: #fafafa;
+  margin: 0;
+  color: #151515;
 }
 
 .container {
-    width: 1080px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 70px;
-    padding: 0 20px;
-    background: white;
-  }
-  
-  .nav ul {
-    display: flex;
-    gap: 20px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    font-weight: 500;
-  }
-  
-  .nav a {
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-  }
+  width: 1080px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 70px;
+  padding: 0 20px;
+  background: white;
+}
 
-  .title {
-    font-weight: 800;
-    font-size: 1.2rem;
-  }
+.nav ul {
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-weight: 500;
+}
 
-  .text-center {
-    max-width: 900px;
-    margin: 0 auto;
-    text-align: left;
-    padding: 20px;
-  }
-  
-  .main {
-    max-width: 1080px;
-    margin: 0 auto;
-  }
-  
-  .image-wrapper {
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-  }
-  body{
-    font-family: "Open Sans", sans-serif;
-    font-size: 1em;
+.nav a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
+.title {
+  font-weight: 800;
+  font-size: 1.2rem;
+}
+
+.text-center {
+  max-width: 900px;
+  margin: 0 auto;
+  text-align: left;
+  padding: 20px;
+  position: relative;
+}
+
+.first-center{background: url(img/main.png);
+  background-size: cover;
+  background-position: bottom;
+color: white;
+margin: 0 0;
+width: 100%;
+height: 400px;
+}
+.word-center{
+position: absolute;
+left: 0;
+bottom: 0;
+margin: 40px 30px;
+width: 650px;}
+
+.second-center{display: none;}
+
+.main {
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
+.image-wrapper {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+}
+body{
+  font-family: "Open Sans", sans-serif;
+  font-size: 1em;
 }
 .navigation{
-    display: grid;
-    grid-template: 3rem 20rem 3rem 20rem/repeat(3,1fr);
-    grid-column-gap: 1.5rem;
-    padding: 3rem;
+  display: grid;
+  grid-template: 3rem 20rem 3rem 20rem/repeat(3,1fr);
+  grid-column-gap: 1.5rem;
+  padding: 3rem;
 }
 .post{
-    grid-column: 1/4;
-    text-align: center;
-    font-size: 1.5em;
+  grid-column: 1/4;
+  text-align: center;
+  font-size: 1.5em;
 }
 .article{
-    width: 100%;
-    height:15em;
-    margin: 1.5em 0;
+  width: 100%;
+  height: 100%;
+  margin: 1.5rem 0;
 }
 .date{
-    font-size: 0.875em;
-    padding-top:1.5rem;
+  font-size: 0.875em;
+  padding-top:1.5rem;
 }
 .blog h2{
-    padding-top: 1rem;
-    margin:0;
+  padding-top: 1rem;
+  margin:0;
 }
 .blog p{
-    padding-top: 0.5rem;
-    margin-top: 0;
-}
-.blog{
-  display: flex;
-  flex-direction: column;
+  padding-top: 0.5rem;
+  margin-top: 0;
 }
 .footer{
-  width: 100%;
-    background: black;
-    color: #FAFAFA;
-    text-align: center;
-    padding: 2rem;
+  background: black;
+  color: #FAFAFA;
+  text-align: center;
+  padding: 2rem;
 }
 .footer p{
-    margin: 0;
-    padding: 0;
-    font-size: 0.75em;
+  margin: 0;
+  font-size: 0.75em;
 }
-.content{
-  /* border: 1px solid black; */
-  display: grid;
-    grid-template: auto auto/2em 1fr 1fr 1fr 2em;
-    grid-column-gap: 1.5rem;
-  padding: 1em 0;
-}
-.blog1{
-  grid-column: 2/3;
-}
-.blog4{
-  grid-column: 2/3;
-  grid-row: 2/3;
-}
-.blog5{
-  grid-column: 3/4;
-  grid-row: 2/3;
-}
-.blog6{
-  grid-column: 4/5;
-  grid-row: 2/3;
-}
+
 @media (max-width: 675px) {
-  .navigation {
-    display: block;
-    padding: 2rem 1rem;
-  }
-  .blog {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-  }
+.navigation {
+  display: block;
+  padding: 2rem 1rem;
+}
+.blog {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.first-center {
+  background: url(img/main.png);
+  background-size: cover;
+  background-position: bottom;
+  color: white;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
 }
