--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,44 @@ body{
   margin: 0;
   font-size: 0.75em;
 }
-
+.blog{
+  display: flex;
+  flex-direction: column;
+}
+.footer{
+  width: 100%;
+    background: black;
+    color: #FAFAFA;
+    text-align: center;
+    padding: 2rem;
+}
+.footer p{
+    margin: 0;
+    padding: 0;
+    font-size: 0.75em;
+}
+.content{
+  /* border: 1px solid black; */
+  display: grid;
+    grid-template: auto auto/2em 1fr 1fr 1fr 2em;
+    grid-column-gap: 1.5rem;
+  padding: 1em 0;
+}
+.blog1{
+  grid-column: 2/3;
+}
+.blog4{
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.blog5{
+  grid-column: 3/4;
+  grid-row: 2/3;
+}
+.blog6{
+  grid-column: 4/5;
+  grid-row: 2/3;
+}
 @media (max-width: 675px) {
 .navigation {
   display: block;
